[package]
authors = ["The wasm-bindgen Developers"]
edition = "2021"
name = "canvas"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"


[dependencies.web-sys]
features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "Window"]
version = "0.3.76"