[package]
authors = ["Alec Rosenbaum"]
edition = "2021"
name = "canvas"
description = "A canvas for drawing gears"
publish = false
version = "0.0.0"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"


[dependencies.web-sys]
features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "Window", "console"]
version = "0.3.76"