[package]
authors = ["Alec Rosenbaum"]
edition = "2021"
name = "canvas"
description = "A canvas for drawing gears"
publish = false
version = "0.0.0"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
base64 = "0.22.1"

[dependencies.web-sys]
features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "console",
    "CssStyleDeclaration",
    "HtmlInputElement",
    "EventTarget",
    "HtmlAnchorElement",
]
version = "0.3.76"

[dependencies.printpdf]
git = "https://github.com/fschutt/printpdf.git"
rev = "e802807355277bc2a0da6b4b57ef52a42a3c63d6"
features = ["png"] 
